--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fs": "^0.0.1-security",
     "node-sass": "^8.0.0",
     "scramble-display": "^0.5.2",
-    "scrambow": "^1.7.0"
+    "scrambow": "^1.7.0",
+    "solution-analyzer": "^0.1.6"
   },
   "devDependencies": {
     "tailwindcss": "^3.2.6"
